# chewie-macros

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml
src/: boxed_error.rs  lib.rs
tests/: README.md  macro_tests.rs
tests/expand/: basic.expanded.rs  basic.rs  custom_box_error_path.expanded.rs  custom_box_error_path.rs  no_trailing_comma.expanded.rs  no_trailing_comma.rs  private_visibility.expanded.rs  private_visibility.rs  pub_crate_visibility.expanded.rs  pub_crate_visibility.rs  trailing_comma.expanded.rs  trailing_comma.rs  with_docs.expanded.rs  with_docs.rs
tests/expand-fail/: empty_body.rs  invalid_syntax.rs  missing_braces.rs  missing_display.expanded.rs  missing_display.rs  unknown_key.rs
